--- a/crypto/templates/telegram/information_analysis_data.html
+++ b/crypto/templates/telegram/information_analysis_data.html
@@ -1,7 +1,12 @@
+From:{{ datetime_from }}
+To: {{ datetime_to }}
 {{ name_exchange }}
+Price: {{ price_token }}
 Volumes:
 - In : {{ value_in_exchange }} (USD) / {{ number_in_exchange }} (Transaction)
 - Out: {{ value_out_exchange }} (USD) / {{ number_out_exchange }} (Transaction)
 - Total: {{ value_exchange }} (USD)
 Big Volumes:
-- {{ value_big_order }} (USD) / {{ number_big_order }} (Transaction)
+- In : {{ value_in_big_order }} (USD) / {{ number_in_big_order }} (Transaction)
+- Out: {{ value_out_big_order }} (USD) / {{ number_out_big_order }} (Transaction)
+- Total: {{ value_big_exchange }} (USD)
